fix: doodle z-index

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ button:focus-visible {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: -1;
 }
 
 .drawable__action {
@@ -85,6 +85,7 @@ button:focus-visible {
   cursor: pointer;
   outline: inherit;
   width: 95px;
+  z-index: 10;
 }
 
 .logo-tag {
